# ultimate-rag

./: .gitignore  Prd.md
.agents/plans/: phase-1-foundation.md  phase-2-ingestion-pipeline.md  phase-3-retrieval-agent.md  phase-3.5-db-management.md  phase-4-modular-client.md
.agents/reports/: Phase1.md  Phase2.md  Phase3.5.md  Phase3.md  Phase4.md  Q1_COMPLETION.md
ultimate_rag/: README.md  pyproject.toml
ultimate_rag/scripts/: reset_db.py
ultimate_rag/src/: __init__.py  client.py  config.py
ultimate_rag/src/agent/: __init__.py  agent.py  memory.py  prompts.py
ultimate_rag/src/agent/tools/: __init__.py  get_content.py  list_docs.py  sql_query.py  vector_search.py
ultimate_rag/src/cleanup/: __init__.py
ultimate_rag/src/database/: __init__.py  connection.py  management.py  schema.sql
ultimate_rag/src/ingestion/: __init__.py  chunker.py  embedder.py  file_detector.py  pipeline.py
ultimate_rag/src/ingestion/processors/: __init__.py  audio.py  base.py  image.py  json_processor.py  pdf.py  spreadsheet.py  text.py  video.py
ultimate_rag/src/sources/: __init__.py
ultimate_rag/tests/: __init__.py  check_docs.py  check_memory.py  conftest.py  demo_rag.py  test_agent.py  test_agent_e2e.py  test_chunker.py  test_client.py  test_database.py  test_file_detector.py  test_live_agent.py  test_live_api.py  test_management.py  test_pipeline.py  test_processors.py  test_verify_client_live.py
ultimate_rag/tests/fixtures/: sample.csv  sample.json  sample.txt
