[project]
name = "ultimate-rag"
version = "0.1.0"
description = "Python RAG system replicating n8n Ultimate RAG workflow"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-postgres>=0.0.16",
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "sqlalchemy>=2.0.0",
    "google-generativeai>=0.8.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "PyMuPDF>=1.24.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
